Innovator/Client/styles/main.css
/* ... */
.aras-navigation-panel__pin-icon .aras-button__icon {
  pointer-events: none;
}
.aras-navigation-panel__favorite-menu-icon {
  margin-right: 0.333rem;
}
.aras-navigation-panel__header {
  font: bold 1.5rem / 1.2 Roboto, 'Noto Sans JP', Arial, sans-serif;
  padding: 12px;
  padding-left: 3.66rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  white-space: nowrap;
}
.aras-navigation-panel__header-icon {
  width: 2rem;
  height: 2rem;
  padding: 0 4px;
  flex-shrink: 0;
}
.aras-navigation-panel__header-title {
  height: 2rem;
  line-height: 2rem;
  overflow: hidden;
  text-overflow: ellipsis;
  flex: 1;
}
.aras-navigation-panel__secondary-menu {
  position: absolute;
  left: 0;
  top: 48px;
}
.aras-navigation-panel .aras-nav {
  padding: 0 12px;
}
.aras-navigation-panel .aras-nav .aras-nav__row:hover::after,
.aras-navigation-panel .aras-nav .aras-nav__row_selected::after {
  background-color: #dddddd;
  animation: none;
  mix-blend-mode: multiply;
}
.aras-navigation-panel .aras-favorite-panel {
  margin-left: 2.66rem;
}
.aras-navigation-panel .aras-nav-toc {
  height: calc(100% - 83px);
  overflow-y: auto;
  padding-left: 2.66rem;
}
.aras-navigation-panel .aras-nav-toc > .aras-nav {
  padding-bottom: 8px;
}
.aras-navigation-panel.aras-sidebar_pinned {
  box-shadow: -4px 0 3px -3px rgba(0, 0, 0, 0.16) inset, -4px 0 2px -3px rgba(0, 0, 0, 0.24) inset;
}
.aras-navigation-panel.aras-sidebar_pinned .aras-nav-toc {
  width: calc(100% - 2.66rem - 2px);
}
.aras-navigation-panel.aras-sidebar_pinned .aras-secondary-menu__favorites-container {
  width: calc(100% - 2px);
}
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical {
  position: absolute;
  top: 0;
  left: 22rem;
  z-index: 1;
  border-width: 0;
}
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical,
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical > .aras-splitter-ghost {
  border-right-width: 0;
}
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical:before,
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical > .aras-splitter-ghost:before {
  display: none;
}
.aras-navigation-panel + .aras-splitter.aras-splitter_vertical > .aras-splitter-ghost {
  border-left: 1px solid #d3d3d3;
}
.aras-navigation-panel .aras-nav__child .aras-button_c {
  background-color: #ffffff;
}
.aras-navigation-panel .aras-nav__child .aras-button_c:not([disabled]):hover {
  background-color: #eeeeee;
}
@keyframes showSecondaryMenu {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0px);
  }
}
.aras-secondary-menu {
  width: 100%;
  height: calc(100% - 48px);
  background: transparent;
  display: flex;
  flex-direction: column;
  padding: 0;
  padding-left: 2.66rem;
  box-sizing: border-box;
  animation-name: showSecondaryMenu;
  animation-duration: 0.1s;
  animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
}
.aras-secondary-menu__buttons-container {
  display: flex;
  flex-direction: column;
  padding: 0 12px 12px;
}
.aras-secondary-menu__create-button .aras-button__text,
.aras-secondary-menu__search-button .aras-button__text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.aras-secondary-menu__quick-search,
.aras-secondary-menu__search-button {
  margin-top: 8px;
}
.aras-secondary-menu__favorites-container {
  z-index: 1;
  overflow-y: auto;
}
.aras-secondary-menu__favorite-category-label {
  font: 500 1rem / 1.2 Roboto, 'Noto Sans JP', Arial, sans-serif;
  color: #707070;
  line-height: 2.667rem;
  padding-left: 12px;
}
.aras-secondary-menu__overlay-icon {
  position: absolute;
  width: 2rem;
  height: 2rem;
}
.aras-quick-search__input {
  width: 100%;
}
.aras-quick-search[disabled] .aras-input-icon {
  opacity: 0.4;
}
.aras-quick-search__spinner {
  position: absolute;
  top: 0;
  right: 6px;
  margin-right: 0;
}
.aras-quick-search .aras-filter-list__icon-container {
  right: 0;
}
:root {
  --tile-button-padding: 20px;
  --tile-image-size: 4rem;
}
main {
  display: flex;
  height: calc(100% - 4rem);
  position: relative;
}
.main {
  background: white;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}
.aras-header {
  height: 4rem;
  background-color: #eeeeee;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 1px 3px rgba(0, 0, 0, 0.24);
  position: relative;
  z-index: 4;
  padding: 4px 0 4px 4px;
}
.aras-header__logo {
  margin-right: 16px;
}
.aras-header__logo .aras-toolbar__image-icon {
  width: 225px;
  padding-left: 3px;
}
@media screen and (max-width: 690px) {
  .aras-header__logo {
    margin-right: 8px;
  }
}
.aras-header .aras-header__navigation-button {
  background-color: transparent;
  height: 3.33rem;
  width: 3.33rem;
  padding: 0;
  box-shadow: none;
}
.aras-header .aras-header__navigation-button:not([disabled]):not([aria-disabled='true']):focus {
  box-shadow: none;
  background-color: transparent;
}
.aras-header .aras-header__navigation-button:not([disabled]):not([aria-disabled='true']):hover,
.aras-header .aras-header__navigation-button:not([disabled]):not([aria-disabled='true']):active {
  background-color: #cccccc;
  box-shadow: none;
  border-color: transparent;
}
.aras-header .aras-header__navigation-button .aras-button__icon {
  height: 100%;
  width: 100%;
}
.aras-header .aras-dropdown-container[open] .aras-header__notifications {
  color: #333333;
  background-color: #e2e6f3;
  border-color: #0303b0;
  box-shadow: none;
}
.aras-header .aras-dropdown-container[open] .aras-header__notifications:not([disabled]):hover,
.aras-header .aras-dropdown-container[open] .aras-header__notifications:not([disabled]):focus {
  box-shadow: none;
}
.aras-header .aras-dropdown-container[open] .aras-header__notifications:not([disabled]):focus {
  background-color: #e2e6f3;
}
.aras-header .aras-dropdown-container[open] .aras-header__notifications:not([disabled]):hover {
  background-color: #dddddd;
}
/* ... */

